<resources>
    <string name="app_name">Cloud Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_dropbox">Dropbox</string>
    <string name="action_google_plus">Google+</string>
    <string name="action_one_drive">OneDrive</string>
    <string name="action_box">Box</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_preview">Preview</string>
    <string name="album_name">Album name</string>
    <string name="upload_album">Upload album</string>
    <string name="take_another_photo">Take another photo</string>
    <string name="upload_image_using">Select storage</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="info_status">Info status.</string>
    <string name="logged_out">Logged out</string>


    <string name="app_key">blg0uayupds8oi2</string>
    <string name="facebook_app_id">792454000930184</string>
    <string name="fb_login_protocol_scheme">fb792454000930184</string>
</resources>
